--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,10 +4,26 @@ version = "0.1.0"
 authors = ["Joshua Ani <josh4820@gmail.com>"]
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[lib]
+name = "tet"
+bench = false
+
+[profile.release]
+debug = true
 
 [dependencies]
 fnv = "1.0"
 nalgebra = "0.24"
 simplicity = "0.3"
 float-ord = "0.2"
+obj = { version = "0.10.2", optional = true }
+
+[dev-dependencies]
+rand = "0.8"
+rand_pcg = "0.3.0"
+rand_distr = "0.4.0"
+criterion = "0.3"
+
+[[bench]]
+name = "delaunay_tets"
+harness = false
