--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ fnv = "1.0"
 nalgebra = "0.24"
 simplicity = "0.3"
 float-ord = "0.2"
+hilbert = "0.1.1"
 obj = { version = "0.10.2", optional = true }
 
 [dev-dependencies]
