--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ nalgebra = "0.24"
 simplicity = "0.4"
 float-ord = "0.2"
 hilbert = "0.1.1"
+bitflags = "1.2.1"
 obj = { version = "0.10.2", optional = true }
 
 [dev-dependencies]
