--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ rand = "0.8"
 rand_pcg = "0.3.0"
 rand_distr = "0.4.0"
 criterion = "0.3"
+pathfinding = "2.1.1"
 
 [[bench]]
 name = "delaunay_tets"
