--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ simplicity = "0.4"
 float-ord = "0.2"
 hilbert = "0.1.1"
 bitflags = "1.2.1"
+ncollide3d = "0.27.0"
 obj = { version = "0.10.2", optional = true }
 
 [dev-dependencies]
