Delaunay tetrahedralization without 0-volume tets

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -82,8 +82,8 @@
                 }
             },
             "args": [
-                "ignore/gear.obj",
-                "ignore/gear_out.obj",
+                "ignore/delaunay_test.obj",
+                "ignore/delaunay_test_out.obj",
             ],
             "cwd": "${workspaceFolder}"
         },
