--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ bitflags = "1.2.1"
 ncollide3d = "0.27.0"
 stable-vec = "0.4.0"
 robust-geo = "0.1.6"
+spade = "1.8.2"
 obj = { version = "0.10.2", optional = true }
 
 [dev-dependencies]
